tests/typechecking/invalid/3-if_then_else/if_bad_arg.ml
let x = 3 in
  if x then
    print_int(x)
  else
    print_int(0)